# con-espressione

./: .gitignore  .gitmodules  Pipfile  README.md  Yamaha-Grand-Lite-v2.0.sf3  build.sh  con_espressione.py  controller.py  environment.yml  expressiveness.py  gui.py  index.html  index.js  leap_control.py  libfluidsynth-2.2.1-sf3.js  midi_thread.py  pyproject.toml  standalone.py  start.sh
basismixer/: bm_controller.py  bm_utils.py  expression_tools.py  midi_controller.py  midi_player.py  performance_codec.py  standalone_bm_thread.py
bm_files/: beethoven_fuer_elise.json  beethoven_fuer_elise.pedal  beethoven_fuer_elise.txt  beethoven_fuer_elise_complete.json  beethoven_fuer_elise_complete.pedal  beethoven_fuer_elise_complete.txt  beethoven_op027_no2_mv1_bm_cof_wm.json  beethoven_op027_no2_mv1_bm_cof_wm.txt  beethoven_op027_no2_mv1_bm_of_wm.json  beethoven_op027_no2_mv1_bm_of_wm.pedal  beethoven_op027_no2_mv1_bm_of_wm.txt  beethoven_op027_no2_mv1_bm_wm.json  beethoven_op027_no2_mv1_bm_wm.txt  beethoven_op027_no2_mv1_bm_z.json  beethoven_op027_no2_mv1_bm_z.pedal  beethoven_op027_no2_mv1_bm_z.txt  chopin_op10_No3_bm.txt  chopin_op10_No3_bm_magaloff.json  chopin_op10_No3_bm_magaloff.pedal  chopin_op10_No3_bm_magaloff.txt  chopin_op10_No3_bm_short.json  chopin_op10_No3_bm_short.txt  chopin_op10_No3_short_v1.json  chopin_op10_No3_short_v1.pedal  chopin_op10_No3_short_v1.txt  chopin_op10_No3_v422.json  kuhlau_op88_allegro_burlesco.json  kuhlau_op88_allegro_burlesco.txt  mozart_k331_3_batik.json  mozart_k331_3_batik.pedal  mozart_k331_3_batik.txt  mozart_kv545_Mv2.json  (+3 more)
(+30 files in other folders)
